commit on master

--- a/styling.css
+++ b/styling.css
@@ -5,3 +5,21 @@ input[#about-button]:hover{
 input[type=submit]:hover{
     text-decoration:underline;
 }
+
+body {
+	background: #e6e6e6;
+}
+
+nav ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	background-color: #010e80;
+	display: table;
+	width: 100%;
+}
+
+nav li {
+	display: table-cell
+}
