--- a/styling.css
+++ b/styling.css
@@ -1,8 +1,8 @@
-class= "menu-btn',
-class= "about-btn",
-class= "catering-btn",
-class= "apply-btn",
-class= "contact-us-btn" {
+.menu-btn,
+.about-btn,
+.catering-btn,
+.apply-btn,
+.contact-us-btn {
     border: 1px solid LightGrey;
     padding: 40px 0px;
     position: relative;
@@ -10,11 +10,11 @@ class= "contact-us-btn" {
     width: 100%;
 }
 
-class= "menu-btn" a ,
-class= "about-btn" a ,
-class= "catering-btn" a ,
-class= "apply-btn" a,
-class= "contact-us-btn" a {
+li.menu-btn a ,
+li.about-btn a ,
+li.catering-btn a ,
+li.apply-btn a,
+li.contact-us-btn a {
     background: green;
     border: 1px solid green;
     border-radius: 3px;
@@ -23,12 +23,13 @@ class= "contact-us-btn" a {
     color: green;
 }
 
-class= "menu-btn" a:hover,
-class= "about-btn" a:hover,
-class= "catering-btn" a:hover,
-class= "apply-btn" a:hover,
-class= "contact-us-btn" a:hover {
+li.menu-btn a:hover,
+li.about-btn a:hover,
+li.catering-btn a:hover,
+li.apply-btn a:hover,
+li.contact-us-button a:hover {
     background: white;
     border: 1px solid green;
     color: red;
 }
+
