--- a/styling.css
+++ b/styling.css
@@ -1,8 +1,4 @@
-#menu-btn,
-#about-btn,
-#catering-btn,
-#apply-btn,
-#contact-us-btn {
+.buttons {
     border: 1px solid LightGrey;
     padding: 40px 0px;
     position: relative;
@@ -10,11 +6,7 @@
     width: 100%;
 }
 
-#menu-btn a,
-#about-btn a,
-#catering-btn a 
-#apply-btn a,
-#contact-us-btn a {
+.buttons {
     background: green;
     border: 1px solid green;
     border-radius: 3px;
@@ -24,11 +16,7 @@
 }
 
 
-#menu-btn a:hover,
-#about-btn a:hover,
-#catering-btn a:hover,
-#apply-btn a:hover,
-#contact-us-btn a:hover  {
+.buttons {
     background: white;
     border: 1px solid green;
     color: red;
