--- a/styling.css
+++ b/styling.css
@@ -6,7 +6,7 @@
     width: 100%;
 }
 
-.buttons {
+.buttons a {
     background: green;
     border: 1px solid green;
     border-radius: 3px;
@@ -16,7 +16,7 @@
 }
 
 
-.buttons {
+.buttons a:hover {
     background: white;
     border: 1px solid green;
     color: red;
