--- a/styling.css
+++ b/styling.css
@@ -31,6 +31,10 @@ ul.navigation {
     margin: 0 auto;
     border: 1px solid rgb(0, 177, 41);
 
+    border: 1px solid black;
+    display: table;
+    margin: 0 auto;
+    padding: 5px;
 
 
 }
@@ -40,3 +44,6 @@ ul.navigation {
     font-weight: bold;
     font-size: 20px;
 }
+
+/* hours styling */
+.header-caption
