--- a/styling.css
+++ b/styling.css
@@ -1,13 +1,27 @@
+
+/* css styling for all html files, basic styling for website*/
+html {
+    font-family: 'Times New Roman', Times, serif;
+    background-color: rgb(0, 170, 0);
+}
+
 ul.navigation {
     list-style-type: none;
     margin: 0;
-    padding: 0;
+    padding-left: 0;
+    padding-top: 20px;
     overflow: hidden;
     background-color: #333;
   }
   
-.navigation li {
+.navigation #gualbertos-logo {
     float: left;
+    font-size: large;
+    color: rgb(0, 170, 0);
+}
+
+.navigation li {
+    float: right;
   }
   
 .navigation li a {
@@ -46,4 +60,7 @@ ul.navigation {
 }
 
 /* hours styling */
-.header-caption
+h3.header-hours {
+ font-weight: bolder;
+ font-family: 'Times New Roman', Times, serif;
+}
