--- a/catering.css
+++ b/catering.css
@@ -1,7 +1,7 @@
 /* css styling for all html files, basic styling for website*/
 html {
     font-family: 'Times New Roman', Times, serif;
-    background-color: rgb(0, 170, 0);
+    background-color: rgb(0, 170, 0, 0.102);
 }
 
 ul.navigation {
