--- a/styling.css
+++ b/styling.css
@@ -2,7 +2,7 @@
 /* css styling for all html files, basic styling for website*/
 html {
     font-family: 'Times New Roman', Times, serif;
-    background-color: rgb(0, 170, 0);
+    background-color: rgb(0, 170, 0,);
 }
 
 ul.navigation {
@@ -14,9 +14,8 @@ ul.navigation {
     background-color: #333;
   }
   
-.navigation li a #gualbertos-logo {
+.navigation #gualbertos-logo {
     float: left;
-    text-align: left;
     font-size: large;
     color: rgb(0, 170, 0);
 }
@@ -37,6 +36,7 @@ ul.navigation {
     background-color: #111;
     text-decoration: underline;
 }
+
 
 /* for any titles*/
 
