commit on 'Master'

--- a/order.css
+++ b/order.css
@@ -48,7 +48,7 @@ ul.navigation {
 .uber-eats-icon,
 .postmates-icon,
 .clover-icon,
-.grubhub-icon, {
+.grubhub-icon {
     width: 200px;
     height: auto;
   }
