commit on 'Master'

--- a/order.css
+++ b/order.css
@@ -37,7 +37,7 @@ ul.navigation {
 }
 
 /* row list */
-.rows-list {
+.row-list {
     display: grid;
     grid-template-columns: auto auto auto auto;
     grid-template-rows: 100px 400px;
