commit on 'master'

--- a/order.css
+++ b/order.css
@@ -27,7 +27,7 @@ ul.navigation {
     display: block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 2px 3px 1px none;
     text-decoration: none;
   }
   
