commit on 'Master'

--- a/order.css
+++ b/order.css
@@ -27,7 +27,7 @@ ul.navigation {
     display: block;
     color: white;
     text-align: center;
-    padding: 2px 3px 1px none;
+    padding: 14px 16px;
     text-decoration: none;
   }
   
