--- a/styling.css
+++ b/styling.css
@@ -5,14 +5,34 @@ html {
     background-color: rgb(0, 170, 0,);
 }
 
+
+
+/* NEW AND IMPROVED NAV STUFF HERE */
+
 ul.navigation {
-    list-style-type: none;
-    margin: 0;
-    padding-left: 0;
-    padding-top: 20px;
-    overflow: hidden;
+    box-sizing: border-box;
+    padding: 20px 5px;
+    margin: 0px auto;
+
+
     background-color: #333;
-  }
+    position: sticky;
+    text-align: center;
+    overflow: hidden;
+}
+
+/* new improved nav stuff */
+
+
+
+
+
+
+
+
+
+
+
   
 .navigation #gualbertos-logo {
     float: left;
