--- a/styling.css
+++ b/styling.css
@@ -1,3 +1,12 @@
+@font-face {
+    font-family: 'Oswald';
+    src: url(../fonts/Oswald/Oswald-ExtraLight.ttf)
+    format(truetype),
+    url(../fonts/Oswald/Oswald-Medium.ttf)
+    format(truetype)
+}
+
+
 
 /* css styling for all html files, basic styling for website*/
 html {
@@ -5,23 +14,51 @@ html {
     background-color: rgb(0, 170, 0,);
 }
 
+
+
+/* NEW AND IMPROVED NAV STUFF HERE */
+
+
+/* main nav box */
 ul.navigation {
-    list-style-type: none;
-    margin: 0;
-    padding-left: 0;
-    padding-top: 20px;
-    overflow: hidden;
+    box-sizing: border-box;
+    padding: 20px 5px;
     background-color: #333;
-  }
+    position: sticky;
+    text-align: center;
+    overflow: hidden;
+    list-style-type: none;
+}
+/*main nav box */
+
+
+/* li elements (actual text and stuff)*/
+
+
+/* li elements (actual text and stuff) */
+/* new improved nav stuff */
+
+
+
+
+
+
+
+
+
+
+
   
 .navigation #gualbertos-logo {
     float: left;
-    font-size: large;
+    font-size: 30px;
+    font-weight: bold;
+    font-family: 'Oswald', sans-serif;
     color: rgb(0, 170, 0);
 }
 
 .navigation li {
-    float: left;
+    float: right;
   }
   
 .navigation li a {
