--- a/styling.css
+++ b/styling.css
@@ -10,7 +10,7 @@
 
 /* css styling for all html files, basic styling for website*/
 html {
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Oswald', 'Times New Roman', Times, sans-serif;
     background-color: rgb(0, 170, 0,);
 }
 
@@ -53,7 +53,7 @@ ul.navigation {
 
 
   
-.navigation #gualbertos-logo {
+ul.navigation #Gualbertos-logo {
     float: left;
     font-size: 30px;
     font-weight: bold;
@@ -63,6 +63,7 @@ ul.navigation {
 
 .navigation li {
     float: right;
+    display: inline;
   }
   
 .navigation li a {
