--- a/styling.css
+++ b/styling.css
@@ -26,30 +26,26 @@ ul.gual-logo {
     padding: 20px 5px;
     box-sizing: border-box;
     padding: 20px 5px;
-    margin: 0px auto;
+    margin: 0px;
     background-color: #333;
     position: sticky;
     text-align: center;
     overflow: hidden;
     list-style-type: none;
+
 }
 /*main nav box */
 
 /* new improved nav stuff */
 
 
-ul.gual-logo li {
+.gual-logo {
     float: left;
     font-size: 18px;
     font-weight: bold;
     font-family: 'Oswald', sans-serif;
     color: rgb(0, 170, 0);
 }
-
-.navigation li {
-    float: right;
-    display: inline;
-  }
   
 .navigation li a {
     display: block;
@@ -58,11 +54,15 @@ ul.gual-logo li {
     padding: 14px 16px;
     text-decoration: none;
     font-size: 15px;
+    float: left;
+    display: inline;
   }
   
 .navigation li a:hover {
     background-color: #111;
     text-decoration: underline;
+    text-decoration-color: ;
+    
 }
 
 
