--- a/styling.css
+++ b/styling.css
@@ -22,16 +22,14 @@ html {
 /* main nav box */
 ul.navigation {
     box-sizing: border-box;
-    padding: 20px 5px;
-    box-sizing: border-box;
-    padding: 20px 5px;
-    margin: 0px;
+    padding: 0;
+    margin: 0;
     background-color: #333;
     position: sticky;
     text-align: center;
     overflow: hidden;
     list-style-type: none;
-
+    height: 50px;
 }
 /*main nav box */
 
@@ -88,7 +86,8 @@ ul.navigation {
 }
 
 /* hours styling */
-h3.header-hours {
+h3.header-hours, 
+h3.header-hours h4 ul.header-hours li {
  font-weight: bolder;
  font-family: 'Times New Roman', Times, serif;
 }
