--- a/styling.css
+++ b/styling.css
@@ -9,7 +9,10 @@
 
 
 /* css styling for all html files, basic styling for website*/
-html {
+html,
+header,
+body,
+footer {
     font-family: 'Oswald', 'Times New Roman', Times, sans-serif;
     background-color: rgb(0, 170, 0,);
 }
@@ -18,9 +21,10 @@ html {
 
 /* NEW AND IMPROVED NAV STUFF HERE */
 
-body {
+header {
     margin: 0px auto;
     padding: 0px auto;
+    font-family: 'Oswald', 'Times New Roman', Times, sans-serif;
 }
 
 
@@ -76,13 +80,10 @@ ul.navigation {
     position: relative;
     margin: 0 auto;
     border: 1px solid rgb(0, 177, 41);
-
     border: 1px solid black;
     display: table;
     margin: 0 auto;
     padding: 5px;
-
-
 }
 
 /* phone number styling */
@@ -91,8 +92,7 @@ ul.navigation {
     font-size: 20px;
 }
 
-/* hours styling */
-h3.header-hours, 
+/* hours styling */ 
 h3.header-hours h4 ul.header-hours li {
     font-weight: bolder;
     font-family: 'Oswald', 'Times New Roman', Times, serif;
@@ -100,6 +100,18 @@ h3.header-hours h4 ul.header-hours li {
     display: inline;
     text-align: center;
     border: 3px solid transparent;
+}
 
+h3.header-hours {
+    font-size: 30px;
+    position: center;
+    display: inline-block;
+    text-align: center;
+    border: 1px solid transparent
+}
 
+footer {
+    border: 1px solid #333;
+    font-family: 'Oswald-ExtraLight', 'Times New Roman', sans-serif;
+    background-color: #333;
 }
