--- a/styling.css
+++ b/styling.css
@@ -20,7 +20,8 @@ footer {
 
 
 /* NEW AND IMPROVED NAV STUFF HERE */
-head {
+head,
+footer {
     margin: 0px auto;
     padding: 0px auto;
     font-family: 'Oswald', 'Times New Roman', Times, sans-serif;
@@ -118,4 +119,9 @@ footer {
     border: 1px solid #333;
     font-family: 'Oswald-ExtraLight', 'Times New Roman', sans-serif;
     background-color: #333;
+}
+
+footer p {
+    color: white;
+    
 }
