--- a/styling.css
+++ b/styling.css
@@ -13,7 +13,7 @@ html,
 header,
 body,
 footer {
-    font-family: 'Oswald', 'Times New Roman', Times, sans-serif;
+    font-family: 'Oswald-Medium', 'Times New Roman', Times, sans-serif;
     background-color: rgb(0, 170, 0,);
 }
 
@@ -24,7 +24,7 @@ head,
 footer {
     margin: 0px auto;
     padding: 0px auto;
-    font-family: 'Oswald', 'Times New Roman', Times, sans-serif;
+    font-family: 'Oswald-Medium', 'Times New Roman', Times, sans-serif;
 }
 
 
@@ -40,6 +40,7 @@ ul.navigation {
     overflow: hidden;
     list-style-type: none;
     height: 50px;
+    font-family: 'Oswald-Medium';
 }
 /*main nav box */
 
@@ -50,7 +51,7 @@ ul.navigation {
     float: left;
     font-size: 24px;
     font-weight: bold;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Oswald-Medium', sans-serif;
     color: rgb(0, 170, 0);
 }
   
@@ -96,7 +97,7 @@ ul.navigation {
 
 
 /* hours styling */ 
-h3.header-hours h4 ul.header-hours li {
+h3.body-hours h4 ul.body-hours li {
     font-weight: bolder;
     font-family: 'Oswald', 'Times New Roman', Times, serif;
     position: center;
@@ -105,7 +106,7 @@ h3.header-hours h4 ul.header-hours li {
     border: 3px solid transparent;
 }
 
-h3.header-hours {
+h3.body-hours {
     font-size: 30px;
     position: center;
     display: inline-block;
@@ -123,5 +124,5 @@ footer {
 
 footer p {
     color: white;
-    
+
 }
