--- a/styling.css
+++ b/styling.css
@@ -13,7 +13,7 @@ html,
 header,
 body,
 footer {
-    font-family: 'Oswald-Medium', 'Times New Roman', Times, sans-serif;
+    font-family: 'Oswald', 'Times New Roman', Times, sans-serif;
     background-color: rgb(0, 170, 0,);
 }
 
@@ -24,7 +24,7 @@ head,
 footer {
     margin: 0px auto;
     padding: 0px auto;
-    font-family: 'Oswald-Medium', 'Times New Roman', Times, sans-serif;
+    font-family: 'Oswald', 'Times New Roman', Times, sans-serif;
 }
 
 
@@ -40,7 +40,7 @@ ul.navigation {
     overflow: hidden;
     list-style-type: none;
     height: 50px;
-    font-family: 'Oswald-Medium';
+    font-family: 'Oswald';
 }
 /*main nav box */
 
@@ -51,7 +51,7 @@ ul.navigation {
     float: left;
     font-size: 24px;
     font-weight: bold;
-    font-family: 'Oswald-Medium', sans-serif;
+    font-family: 'Oswald', sans-serif;
     color: rgb(0, 170, 0);
 }
   
@@ -120,7 +120,7 @@ h3.body-hours-header {
 
 footer {
     border: 1px solid #333;
-    font-family: 'Oswald-ExtraLight', 'Times New Roman', sans-serif;
+    font-family: 'Oswald', 'Times New Roman', sans-serif;
     background-color: #333;
 }
 
