--- a/styling.css
+++ b/styling.css
@@ -20,11 +20,17 @@ footer {
 
 
 /* NEW AND IMPROVED NAV STUFF HERE */
+
+/* css for all html tags here */
 head,
 footer {
     margin: 0px auto;
     padding: 0px auto;
     font-family: 'Oswald', 'Times New Roman', Times, sans-serif;
+}
+
+li {
+    list-style-type: none;
 }
 
 
