--- a/styling.css
+++ b/styling.css
@@ -21,6 +21,12 @@ footer {
 /* NEW AND IMPROVED NAV STUFF HERE */
 
 /* css for all html tags here */
+*,
+html {
+    margin: 0;
+    padding: 0;
+}
+
 head,
 footer {
     margin: 0px auto;
@@ -35,10 +41,14 @@ li {
 
 
 /* main nav box */
+header {
+    margin: 0px;
+}
+
 ul.navigation {
     box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+    padding: 0px;
+    margin: 0px;
     background-color: #333;
     position: sticky;
     text-align: center;
