--- a/app/globals.css
+++ b/app/globals.css
@@ -174,7 +174,7 @@ span {
       rgba(0, 0, 0, 0.5) 10%,
       rgba(0, 0, 0, 0)
     ),
-    url("https://lolitasmexicanfood.com/wp-content/uploads/2019/02/familyrun.jpg");
+    url("https://res.cloudinary.com/dazkujlz2/image/upload/v1705510333/i9bufu4ngmwsk9df78kg.jpg");
 }
 
 .home-cardTwo {
@@ -184,7 +184,7 @@ span {
       rgba(0, 0, 0, 0.5) 10%,
       rgba(0, 0, 0, 0)
     ),
-    url("https://lolitasmexicanfood.com/wp-content/uploads/2019/02/classical-recipes.jpg");
+    url("https://res.cloudinary.com/dazkujlz2/image/upload/v1705510387/u9tyumwdgfvgxahnbboe.jpg");
 }
 
 .home-cardThree {
